--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -3039,7 +3039,7 @@ print(arq_label_table)
 
 ```
 
-Response option for `rqa`, `rqb`, `rqc`, `rqd`.
+Response option for `arqa`, `arqb`, `arqc`, `arqd`.
 
 ```{r ARQ-label-table-2, results = 'asis'}
 
@@ -3083,6 +3083,7 @@ All ARQ survey items are presented in the following table
 # Pull question wording from qualtrics data
 arq_word <- qualtrics %>% 
   select(RQ1,RQA, RQB, RQC, RQD) %>% 
+  rename_with(~ str_replace(., "^RQ", "arq"), starts_with("RQ")) %>%
   slice(1)
 
 #create table with variable name, description, and notes
@@ -3093,7 +3094,7 @@ arq_word_long <- arq_word %>%
   mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
          var_name = str_to_lower(var_name), 
          notes = as.character("")) %>% 
-  mutate(description = if_else(var_name == "rq1", "Please tell me which one style best describes you or is the closest to the way you are.", description))
+  mutate(description = if_else(var_name == "arq1", "Please tell me which one style best describes you or is the closest to the way you are.", description))
 
 ```
 
@@ -3160,7 +3161,7 @@ arq_subscale <- complete %>%
 arq_scale_df <- data.frame(
   var_name = c("arq_group", "arq_model_self", "arq_model_other"),
   scale = c("Attachment Group", "Model of Self", "Model of Other"),
-  scale_construction = c("Highest rating among `rqa`, `rqb`, `rqc`, `rqd`", "(`rqa` + `rqd`) - (`rqc` + `rqb`)", "(`rqa` + `rqc`) - (`rqd` + `rqb`)"))
+  scale_construction = c("Highest rating among `arqa`, `arqb`, `arqc`, `arqd`", "(`arqa` + `arqd`) - (`arqc` + `arqb`)", "(`arqa` + `arqc`) - (`arqd` + `arqb`)"))
 
 # Create the gt table object
 arq_scale_table <- gt(arq_scale_df) %>% 
@@ -3338,6 +3339,7 @@ PRSS survey items are presented in the following table:
 # Pull question wording from Qualtrics data
 prss_word <- qualtrics %>% 
   select(starts_with("ps")) %>% 
+  rename_with(~ paste0("prss", as.numeric(str_replace(., "^PS", "")) - 8), starts_with("PS")) %>%
   slice(1)
 
 #create table with variable name, description, and notes
@@ -7219,6 +7221,128 @@ sus_tbl <- sus_summary_data %>%
 sus_tbl
 
 ```
+
+
+
+# PCL
+<MARIA: you might want to switch this to full name to be consistent with other measure.> 
+  
+  
+### PCL Description
+  
+  <MARIA> please insert a breif description for this measure 
+
+
+* All items need to be reverse scored. 
+
+* This is not a a standardized questionnaire, so missing data rule was not applied. And no subscale was computed. 
+
+
+
+Reference:
+  <Maria, please add a reference if needed> 
+  
+### PCL Variables
+  
+#### Value Labels
+
+
+  
+####
+PCL survey items are presented in the following table:
+  
+Leading question: Thinking about your partner, how often is it true that they:
+```{r pcl-var-prep}
+# Pull question wording from Qualtrics data
+pcl_word <- qualtrics %>% 
+  select(starts_with("pcl")) %>%
+  slice(1)
+
+#create table with variable name, description, and notes
+pcl_word_long <- pcl_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         description = str_replace(description, "\\d+[a-zA-Z]\\. ", ""),
+         description = str_replace(description, "READ: Please use the answer choices below follow up 1.", ""),
+         description = str_replace(description, "\\d+[a-zA-Z]\\d+ READ:", ""),
+         var_name = str_to_lower(var_name),
+         notes = as.character("")) %>% 
+  # Edits Variable description and value
+  mutate(description = if_else(var_name == "pcl1", "Natural disaster (for example, flood, hurricane, tornado, earthquake).", description)) %>%
+  mutate(description = if_else(var_name == "pcl1", "How old were you when this occurred?.", description))
+  
+ # mutate(Value = if_else(var_name %in% everything(), paste0("This item should be reverse scored. ", var_name, "_r is reverse scored", `Value`)) 
+
+
+```
+
+```{r pcl-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+pcl_gt_table <- gt(pcl_word_long)
+
+# Table-specific formatting (col width, names)
+pcl_gt_table <- pcl_gt_table %>% 
+  cols_label(var_name = "Variable", 
+             description = "Description"
+             #notes = "Notes"
+  ) %>% 
+  apply_tbl_theme() %>% 
+  cols_width(description ~ px(300),
+             var_name ~ px(100)
+  ) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(pcl_gt_table)
+```
+
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Only missing percentage are presented 
+
+```{r pcl-missing}
+# Create subset of BSI items
+pcl_data_subset <- complete %>%
+  select(starts_with("sg"))
+
+## mean is showing 2 decimals per authors
+pcl_summary_data <- lapply(pcl_data_subset, function(x) {
+  x <- replace(x, x < -40, NA)
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+pcl_summary_data <- as.data.frame(pcl_summary_data)
+
+# Set items as first row
+pcl_summary_data <- rbind(names(pcl_summary_data), pcl_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+pcl_tbl <- pcl_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Missing = "% Missing") %>% 
+  # cols_width(everything() ~ pct(100)) %>%
+  cols_align(columns = c("Missing"), align = "left") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+pcl_tbl
+
+```
+
 
 # References 
 
