--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -305,9 +305,8 @@ If you have questions about the data or study, please contact the Principal Inve
 
 ### Missing Data Rule
 
-For summary or subscale scores that are computed with individual items,
-any of the above reasons are included in computing the percent of
-missing data. The following missing data rules are below and follow procedures used throughout the history of this longitudinal study. In some cases, measure specific guidelines for handling missing data were used when those guidelines were more stringent. Exceptions are called out within individual measure documentation.
+For summary or subscale scores that are computed with individual items, any of the above reasons are included in computing the percent of missing data. The following missing data rules are below and follow procedures used throughout the history of this longitudinal study. In some cases, measure specific guidelines for handling missing data were used when those guidelines were more stringent. Exceptions are called out within individual measure documentation.
+Note that 
 
 -   For scales with [10 or more items]{.underline}, a composite score
     (average/total) is computed for each participant that have less than
@@ -334,12 +333,12 @@ missing data. The following missing data rules are below and follow procedures u
 
 The Brief Symptom Inventory (BSI) is designed to reflect psychological symptom patterns of psychiatric and medical patients. The BSI instrument is especially appropriate in clinical situations where debilitation results in reduced attention and endurance, in research with limited interview schedules, and in outpatient clinics where testing procedures demand brevity. The BSI instrument is also frequently used in measuring patient progress during treatment or in the assessment of treatment outcome.
 
-*   For the present study, 19 items from the BSI were collected in order to calculate the **Somatization**, **Anxiety**, and **Depression** raw        subscales.
+*   For the present study, 19 items from the BSI were collected in order to calculate the **Somatization**, **Anxiety**, and **Depression** raw subscales.
 
     + **Somatization** reflects distress arising from perceptions of bodily dysfunction.
     + **Anxiety** reflects general signs such as nervousness and tension are included in the Anxiety dimension, as are panic attacks and feelings of terror.
     + **Depression** reflects symptoms of dysphoric mood and affect are represented as are lack of motivation and loss of interest in life.
-
+    
   * Item numbers in this data set may not match original item numbers from
 the BSI. Please reference this guide to see match with original BSI (original BSI item number in *italics*): 01 = *01*, 02 = *02*, 03 = *07*, 04 = *09*, 05 = *12*, 06 = *16*, 07 = *17*, 08 = *18*, 09 = *19*, 10 = *23*, 11 = *29*, 12 = *30*, 13 = *33*, 14 = *35*, 15 = *37*, 16 = *38*, 17 = *45*, 18 = *49*, 19 = *50* 
 
@@ -348,7 +347,7 @@ the BSI. Please reference this guide to see match with original BSI (original BS
   * **Higher** scores indicate **more** severe
 psychological symptoms.
 
-  * The missing data rule was not applied. The only missing data in this measure reflects responses not collected due to our protocols for participants who were incarcerated at the time of the assessment.
+  * The missing data rule was not applied. The only missing data in this measure reflects responses not collected on `bsi4` due to our protocols for participants who were incarcerated at the time of the assessment. According to the BSI manual, up to one item can be missing from each subscale to obtain valid subscale scores.
 
 Reference:
 [@derogatis1983brief](https://www.cambridge.org/core/journals/psychological-medicine/article/abs/brief-symptom-inventory-an-introductory-report/307F805810B165ED58581E355F24329F);
@@ -393,7 +392,7 @@ print(bsi_label_table)
 
 BSI survey items are presented in the following table:
 
-**STEM**: *During the past week, how much were you bothered by...*
+**Question stem: During the past week, how much were you bothered by...**
 
 ```{r BSI-var-prep}
 # Pull question wording from Qualtrics data
@@ -440,15 +439,11 @@ print(my_gt_table)
 
 #### Scale and Subscales
 
-Information on the total score and subscale variables are below.
-Variables were constructed by summing included items.
+Information on the subscale variables are below.
+Variables were constructed by averaging the included items. 
 
 ```{r bsi alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
 #Calculate internal reliability 
-bsi_alpha <-
-  complete %>%
-  select(bsi1:bsi19) %>%
-  psych::alpha(check.keys = TRUE)
 
 bsi_alpha_som <-
   complete %>%
@@ -472,15 +467,13 @@ bsi_alpha_dep <- complete %>%
 ```{r BSI-scale-table, results = 'asis'}
 # Create the table as a data frame
 bsi_scale_df <- data.frame(
-  var_name = c("bsi_total", "bsi_soma", "bsi_anx", "bsi_dep"),
-  scale = c("Total Score (19)", "Somatization (7)", "Anxiety (6)", "Depression (6)"),
-  scale_construction = c("`bsi1`, `bsi2`, `bsi3`, `bsi4`, `bsi5`, `bsi6`, `bsi7`, `bsi8`, `bsi9`, `bsi10`, `bsi11`, `bsi12`, `bsi13`, `bsi14`, `bsi15`, `bsi16`, `bsi17`, `bsi18`, `bsi19`",
-                           "`bsi2`, `bsi3`, `bsi10`, `bsi11`, `bsi12`, `bsi13`, `bsi15`",
+  var_name = c("bsi_soma", "bsi_anx", "bsi_dep"),
+  scale = c("Somatization (7)", "Anxiety (6)", "Depression (6)"),
+  scale_construction = c("`bsi2`, `bsi3`, `bsi10`, `bsi11`, `bsi12`, `bsi13`, `bsi15`",
                            "`bsi1`, `bsi5`, `bsi9`, `bsi16`, `bsi17`, `bsi18`",
                            "`bsi4`, `bsi6`, `bsi7`, `bsi8`, `bsi14`, `bsi19`"),
-  scale_range = c("0-76", "0-28", "0-24", "0-24"),
-  alpha = c(round(bsi_alpha$total$raw_alpha, 3), 
-            round(bsi_alpha_som$total$raw_alpha, 3), 
+  scale_range = c("0-4", "0-4", "0-4"),
+  alpha = c(round(bsi_alpha_som$total$raw_alpha, 3), 
             round(bsi_alpha_anx$total$raw_alpha, 3), 
             round(bsi_alpha_dep$total$raw_alpha, 3))
 )
@@ -507,24 +500,27 @@ print(bsi_scale_table)
 
 #### Descriptive Statistics
 
-Descriptive statistics are presented below for each item, total, and
-subscale raw score:
+Descriptive statistics are presented below for each item and subscale raw score:
 
 ```{r bsi-mean-items}
 # Create subset of BSI items
 data_subset <- complete %>%
-  select(bsi1:bsi19, bsi_total, bsi_soma, bsi_anx, bsi_dep)
+  select(bsi1:bsi19, bsi_soma, bsi_anx, bsi_dep)
 
 # Calculate the summary statistics for each variable
 ## mean is showing 2 decimals per authors
 summary_data <- lapply(data_subset, function(x) {
-  x <- replace(x, x < -40, NA)
-  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  sd_val <- round(sd(x, na.rm = TRUE), 2)
-  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
-  miss_val <- round(mean(is.na(x)) * 100, 2)
+  x <- replace(x, (x < -40 & x!= -55 & x!= -88), NA)  # Your original recoding
+  x <- replace(x, (x == "-44" | x== "-77" | x== "-99"), NA)  # Additional recoding
+  # Exclude negative values and specific negative values from calculations
+  x_no_negatives <- replace(x, (x < 0 | x == -44 | x == -77 | x == -99), NA)
+  mean_val <- ifelse(all(is.na(x_no_negatives)), NA, sprintf("%.2f", round(mean(x_no_negatives, na.rm = TRUE), 2)))
+  sd_val <- ifelse(all(is.na(x_no_negatives)), NA, round(sd(x_no_negatives, na.rm = TRUE), 2))
+  range_val <- ifelse(all(is.na(x_no_negatives)), NA, paste(min(x_no_negatives, na.rm = TRUE), max(x_no_negatives, na.rm = TRUE), sep = "-"))
+  miss_val <- round(mean(is.na(x)) * 100, 2)  # Calculate missing value percentage using original x
   c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
 })
+
 
 # Convert summary_data to a data frame
 summary_data <- as.data.frame(summary_data)
@@ -553,11 +549,9 @@ tbl
 
 #### Distributions
 
-Distributions are presented below for the total score and each subscale:
+Distributions are presented below for each subscale:
 
 ```{r bsi-distributions, class.source='fold', echo = FALSE}
-p_bsi_total <- complete %>%
-  composite_hist(x = bsi_total) 
 
 p_bsi_soma <- complete %>%
   composite_hist(x = bsi_soma) 
@@ -568,7 +562,7 @@ p_bsi_anx <- complete %>%
 p_bsi_dep <- complete %>%
   composite_hist(x = bsi_dep) 
 
-ggarrange(p_bsi_total, p_bsi_soma + rremove("ylab"), 
+ggarrange(p_bsi_soma + rremove("ylab"), 
           p_bsi_anx, p_bsi_dep + rremove("ylab")) %>%
   annotate_figure(top = text_grob( "Distribution for BSI Subscales \n(x-axis and y-axis are in different scales)"))
 ```
@@ -580,16 +574,16 @@ ggarrange(p_bsi_total, p_bsi_soma + rremove("ylab"),
 
 The Center for Epidemiological Studies – Depression Scale (CES-D) is a self-report measure with 20 items comprising six scales reflecting major dimensions of depression: depressed mood, feelings of guilt and worthlessness, feelings of helplessness and hopelessness, psychomotor retardation, loss of appetite, and sleep disturbance.
 
-  * All 20 items from the CES-D were collected and a depression subscale was calculated: **depressive symptoms**. Four items (`c4`, `c8`, `c12`, and `c16`) should be reverse scored which is noted in the variable table below and the reverse scored variables are provided (`c4_r`, `c8_r`, `c12_r`, and `c16_r`). 
+  * All 20 items from the CES-D were collected and a depression subscale was calculated: **depressive symptoms**. 
+  
+  * Four items (`c4`, `c8`, `c12`, and `c16`) should be reverse scored which is noted in the variable table below and the reverse scored variables are provided (`c4_r`, `c8_r`, `c12_r`, and `c16_r`). 
 
-  * **Higher** scores indicate the presence of **more** depression symptoms.
+  * **Higher** scores indicate the presence of **greater** depression symptoms.
 
   * Four additional variables (`c21`-`c24`) were included in this section to assess suicidality. Variables `c22` and `c23` are only applicable if
 participants responded "Yes" to `c21`.
 
-  * The missing data rule was not applied since all participants had less
-than 20% missing data. Missing data for each variable is presented in
-the descriptive statistics table below.
+  * The missing data rule was not applied since all participants had less than 20% missing data. Missing data for each variable is presented in the descriptive statistics table below.
 
 Reference:
 [@radloff1977ces](https://journals.sagepub.com/doi/abs/10.1177/014662167700100306);
@@ -598,12 +592,11 @@ Reference:
 -   Additional References:
 
     -   Cutoff Information:
-        [@henry2018determining](https://www.sciencedirect.com/science/article/pii/S0165032717319274?casa_token=Aan1lg2Z8mUAAAAA:aun9j7DwQRQLhRqhbBJQfpPQG4fDv4yjN1WGHvzv-Hh9Pu58f7IhyGyPTDJmeAUZWonwmO7tfi4);
-        [DOI](https://doi.org/10.1016/j.jad.2018.02.071)
+        [@henry2018determining](https://www.sciencedirect.com/science/article/pii/S0165032717319274?casa_token=Aan1lg2Z8mUAAAAA:aun9j7DwQRQLhRqhbBJQfpPQG4fDv4yjN1WGHvzv-Hh9Pu58f7IhyGyPTDJmeAUZWonwmO7tfi4)
+      
 
     -   Items for Potential Subscales:
-        [@canady2009measurement](https://connect.springerpub.com/content/sgrjnm/17/2/91.abstract);
-        [DOI](10.1891/1061-3749.17.2.91)
+        [@canady2009measurement](https://connect.springerpub.com/content/sgrjnm/17/2/91.abstract)
 
 ### CES-D Variables
 
@@ -640,8 +633,7 @@ print(cesd_label_table)
 
 ```
 
-Additional variables on suicidality (`c21`-`c24`) share the same
-response options.
+Additional variables on suicidality (`c21`-`c24`) share the same response options.
 
 ```{r CESD-label-table2, results = 'asis'}
 
@@ -673,6 +665,8 @@ print(cesd2_label_table)
 #### Survey Items
 
 All CES-D survey items are presented in the following table:
+
+**Question stem: During the past week...**
 
 ```{r CESD-var-prep}
 # Pull question wording from qualtrics data
@@ -722,46 +716,34 @@ print(cesd_gt_table)
 
 #### Scale and Subscales
 
-Information on the depression subscale is shown below.
-The depression symptoms subscale was constructed by summing corresponding
-items.
+Information on the depression subscale is shown below. The depression symptoms subscale was constructed by summing corresponding items.
 
 ```{r cesd-alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
 #Calculate internal reliability 
-# total and depression are the same so only including dep. subscale
 
 cesd_alpha <-
   complete %>%
   select(c1:c3,c4_r,c5:c7,c8_r,c9:c11,c12_r,c13:c15,c16_r,c17:c20) %>%
-  psych::alpha(check.keys = TRUE)
-
-cesd_dep_alpha <- 
-  complete %>%
-  select(c1:c3,c4_r,c5:c7,c8_r, c9:c11,c12_r, c13:c15,c16_r, c17:c20) %>%
+  filter(across(everything(), ~. >= 0)) %>%
   psych::alpha(check.keys = TRUE)
 
 
 cesd_alpha_table <- tibble(
   Scale = c('CESD - Depressive Symptoms'),
-  Alpha = c(round(cesd_dep_alpha$total$raw_alpha, 3)
+  Alpha = c(round(cesd_alpha$total$raw_alpha, 3)
   )
 )
 ```
 
 ```{r CESD-scale-table, results = 'asis'}
 # Create the table as a data frame
-# Maria start here
-# TODO: should the calculation use revers score?
-#TODO: Total range should be changed since we change the scale starting from 1
+
 cesd_scale_df <- data.frame(
-  var_name = c("cesd_total", "cesd_dep_symp_total"),
-  scale = c("Total Score (20)", "Depression (16)"),
-  scale_construction = c("`c1`, `c2`, `c3`, `c4_r`, `c5`, `c6`, `c7`, `c8_r`, `c9`, `c10`, `c11`, `c12_r`, `c13`, `c14`, `c15`, `c16_r`, `c17`, `c18`, `c19`, `c20`",
-                           "`c1`, `c2`, `c3`, `c5`, `c6`, 
-                         #`c7`, 
-                         `c9`, `c10`, `c11`, `c13`, `c14`, `c15`, `c17`, `c18`, `c19`, `c20`"),
-  scale_range = c("0-80", "0-64"),
-  alpha = c(round(cesd_alpha$total$raw_alpha, 3), round(cesd_dep_alpha$total$raw_alpha, 3))
+  var_name = c("cesd_dep_symp"),
+  scale = c("Depression Symptoms (20)"),
+  scale_construction = c("`c1`, `c2`, `c3`, `c4_r`, `c5`, `c6`, `c7`, `c8_r`, `c9`, `c10`, `c11`, `c12_r`, `c13`, `c14`, `c15`, `c16_r`, `c17`, `c18`, `c19`, `c20`"),
+  scale_range = c("0-60"),
+  alpha = c(round(cesd_alpha$total$raw_alpha, 3))
 )
 
 # Create the gt table object
@@ -786,8 +768,7 @@ print(cesd_scale_table)
 
 #### Descriptive Statistics
 
-Descriptive statistics are presented below for each item, total, and
-subscale score:
+Descriptive statistics are presented below for each item and subscale score:
 
 ```{r cesd-mean-items}
 # Create subset of CESD items
@@ -795,18 +776,21 @@ data_subset_cesd <- complete %>%
   select(c1:c24, cesd_dep_symp)
 
 # Calculate the summary statistics for each variable
-summary_data_cesd <- lapply(data_subset_cesd, function(x) {
-  x <- replace(x, x < -40, NA)
-  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  sd_val <- sprintf("%.2f", round(sd(x, na.rm = TRUE), 2))
-  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
-  miss_val <- round(mean(is.na(x)) * 100, 2)
+summary_df_cesd <- lapply(data_subset_cesd, function(x) {
+  x <- replace(x, (x < -40 & x!= -55 & x!= -88), NA)  # Your original recoding
+  x <- replace(x, (x == "-44" | x== "-77" | x== "-99"), NA)  # Additional recoding
+  # Exclude negative values and specific negative values from calculations
+  x_no_negatives <- replace(x, (x < 0 | x == -44 | x == -77 | x == -99), NA)
+  mean_val <- ifelse(all(is.na(x_no_negatives)), NA, sprintf("%.2f", round(mean(x_no_negatives, na.rm = TRUE), 2)))
+  sd_val <- ifelse(all(is.na(x_no_negatives)), NA, round(sd(x_no_negatives, na.rm = TRUE), 2))
+  range_val <- ifelse(all(is.na(x_no_negatives)), NA, paste(min(x_no_negatives, na.rm = TRUE), max(x_no_negatives, na.rm = TRUE), sep = "-"))
+  miss_val <- round(mean(is.na(x)) * 100, 2)  # Calculate missing value percentage using original x
   c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
 })
 
 # Convert summary_data to a data frame
-summary_df_cesd <- as.data.frame(summary_data_cesd) %>% 
-  rbind(names(summary_data_cesd)) %>% 
+summary_df_cesd <- as.data.frame(summary_df_cesd) %>% 
+  rbind(names(summary_df_cesd)) %>% 
   t() %>% 
   as.data.frame() %>% 
   select(`5`, everything())
@@ -831,32 +815,21 @@ cesd_tbl
 
 #### Distributions
 
-Distributions are presented below for the total score and each subscale:
+Distributions are presented below for depression symptoms subscale:
 
 ```{r cesd-distributions, class.source='fold', echo = FALSE}
-p_cesd_total <- complete %>%
-  composite_hist(
-    cesd_total
-    ) +
-  labs(
-    title = 'CESD Total'
-    )
-
 p_cesd_dep_symp <- complete %>%
   composite_hist(
     cesd_dep_symp
     ) +
   labs(
-    title = 'Depressive Symptoms Subscale'
+    title = 'Depression Symptoms'
     )
 
-# MARIA make sure only shows the one
-ggarrange(p_cesd_total, p_cesd_dep_symp + rremove("ylab")) %>%
-  annotate_figure(top = text_grob( "Distribution for CESD Subscales \n(x-axis and y-axis are in different scales)"))
+ggarrange(p_cesd_dep_symp) %>%
+  annotate_figure(top = text_grob( "Distribution for CESD Depression Symtpoms"))
 
 ```
-
-
 
 
 ## Coronavirus Impacts Questionnaire (CIQ)
